update see Figure 7 link

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6f166af3ef293f4f",
    "metadata": {
     "ExecuteTime": {
@@ -51,12 +51,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from myst_nb import glue"
+    "from myst_nb import glue\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "63270171-07bf-4690-86d5-dff5d7c73f86",
    "metadata": {
     "editable": true,
@@ -70,8 +70,8 @@
    "outputs": [
     {
      "data": {
-      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_score</th>\n      <th>logistic_regression_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.759259</td>\n      <td>0.753086</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "application/papermill.record/text/plain": "   dummy_model_score  logistic_regression_score\n0           0.759259                   0.753086"
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_precision_score (%)</th>\n      <th>logistic_regression_precision_score (%)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>75.93</td>\n      <td>76.1</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   dummy_model_precision_score (%)  logistic_regression_precision_score (%)\n0                            75.93                                     76.1"
      },
      "metadata": {
       "scrapbook": {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "40ce1e26-d231-42c4-b51c-33753b220372",
    "metadata": {
     "editable": true,
@@ -119,8 +119,8 @@
    "outputs": [
     {
      "data": {
-      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.759259</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "application/papermill.record/text/plain": "   dummy_model_score\n0           0.759259"
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dummy_model_precision_score (%)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>75.93</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   dummy_model_precision_score (%)\n0                            75.93"
      },
      "metadata": {
       "scrapbook": {
@@ -132,8 +132,20 @@
     },
     {
      "data": {
-      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>logistic_regression_score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.753086</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "application/papermill.record/text/plain": "   logistic_regression_score\n0                   0.753086"
+      "application/papermill.record/text/plain": "75.93"
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "dummy_mean_test_score_value"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/papermill.record/text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>logistic_regression_precision_score (%)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>76.1</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "application/papermill.record/text/plain": "   logistic_regression_precision_score (%)\n0                                     76.1"
      },
      "metadata": {
       "scrapbook": {
@@ -142,13 +154,27 @@
       }
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/papermill.record/text/plain": "76.1"
+     },
+     "metadata": {
+      "scrapbook": {
+       "mime_prefix": "application/papermill.record/",
+       "name": "regression_mean_test_score_value"
+      }
+     },
+     "output_type": "display_data"
     }
    ],
    "source": [
     "dummy_mean_test_score = result_df[['dummy_model_precision_score (%)']]\n",
     "glue(\"dummy_mean_test_score\",dummy_mean_test_score, display=False)\n",
+    "glue(\"dummy_mean_test_score_value\",dummy_mean_test_score['dummy_model_precision_score (%)'][0], display=False)\n",
     "regression_mean_test_score = result_df[['logistic_regression_precision_score (%)']]\n",
-    "glue(\"regression_mean_test_score\",regression_mean_test_score, display=False)"
+    "glue(\"regression_mean_test_score\",regression_mean_test_score, display=False)\n",
+    "glue(\"regression_mean_test_score_value\",regression_mean_test_score['logistic_regression_precision_score (%)'][0], display=False)"
    ]
   },
   {
@@ -471,7 +497,7 @@
     "tags": []
    },
    "source": [
-    "The test data of logistic regression yields an precision of {glue:text}`regression_mean_test_score`%. Precision is calculated as the number of true positives divided by the sum of true positives and false positives. Nevertheless, caution is necessary when interpreting this metric."
+    "The test data of logistic regression yields an precision of {glue:text}`regression_mean_test_score_value`%. Precision is calculated as the number of true positives divided by the sum of true positives and false positives. Nevertheless, caution is necessary when interpreting this metric."
    ]
   },
   {
@@ -530,7 +556,7 @@
     "\n",
     "\n",
     "### Overall\n",
-    "The model training is designed such that it follows the Golden Rule, which refers to \"despite our utmost concern for test error, it is crucial to emphasize that the training phase must remain completely unaffected by the test data.\" The test data of dummy regression yields a precision of {glue:text}`dummy_mean_test_score`%. The precision of dummy regression is better then the precision of logistic regression. In the preceding examination, we utilize `Logistic Regression` and `Dummy Regression`. Consequently, the result does not show advantage of `Logistic Regression` over `Dummy Regression`. (see {glue:text}`result_df`%) Further data preprocessing is needed to enhance the overall effectiveness of the model. This is aligned with expectation, because we do not have enough meaningful features to extract information that is helpful for a more accurate categorization. Also, we have imbalanced classes, which can also prevent the model from determining whether the index will grow. \n",
+    "The model training is designed such that it follows the Golden Rule, which refers to \"despite our utmost concern for test error, it is crucial to emphasize that the training phase must remain completely unaffected by the test data.\" The test data of dummy regression yields a precision of {glue:text}`dummy_mean_test_score_value`%. The precision of dummy regression is better then the precision of logistic regression. In the preceding examination, we utilize `Logistic Regression` and `Dummy Regression`. Consequently, the result does not show advantage of `Logistic Regression` over `Dummy Regression`. (see {numref}`Figure {number} <result_df>`) Further data preprocessing is needed to enhance the overall effectiveness of the model. This is aligned with expectation, because we do not have enough meaningful features to extract information that is helpful for a more accurate categorization. Also, we have imbalanced classes, which can also prevent the model from determining whether the index will grow. \n",
     "\n",
     "The model's performance may be sensitive to hyperparameter settings, therefore it can be helpful to improve the model performance to experiment with different configurations through hyperparameter tuning. In the future, to improve the performance of the model, we may want to consult with specialists of finance field to get more key information about the topic. This will allow more features to be added to the data and positively impact the model training. \n"
    ]
@@ -594,9 +620,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:522Group3]",
+   "display_name": "522Group3",
    "language": "python",
-   "name": "conda-env-522Group3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
