--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -38,9 +38,6 @@
     },
     "collapsed": false,
     "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "slideshow": {
      "slide_type": ""
     },
@@ -182,7 +179,8 @@
    "metadata": {},
    "source": [
     "## Summary\n"
-   ]
+   ],
+   "id": "51f0df064432c0e5"
   },
   {
    "cell_type": "markdown",
@@ -191,7 +189,8 @@
     "In our exploration of the impact of inflation and interest rates on stock returns, we employed logistic regression to build a predictive model. The model, trained on data sourced from the S&P500, CPI, and Federal funds rate, exhibited reasonable performance. In the context, we want to make sure every positive prediction is accurate and choose the metric precision which focuses specifically on maximizing the true positive predictions among all the instances predicted as positive. \n",
     "\n",
     "Utilizing Python and packages such as Numpy, Pandas, Altair, and Scikit-learn, our analysis incorporated data preprocessing to address variations in sampling frequencies among S&P500 index, CPI, and interest rate data. Resampling to the last day of every month and filtering noise through monthly median calculations were crucial steps in preparing the data for effective analysis. "
-   ]
+   ],
+   "id": "b5822c331da1e835"
   },
   {
    "cell_type": "markdown",
@@ -206,7 +205,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In the context of the current financial landscape shaped by the COVID-19 pandemic, central banks globally responded by lowering interest rates to mitigate economic challenges. However, this led to heightened inflation due to increased consumer spending. In an effort to regain control and revert to pre-pandemic levels, central banks sharply raised interest rates to the highest point in 15 years. With over 50% of American households owning stocks {cite}`Caporal2023StockOwnership`, the team is keen to explore the impact of inflation and interest rates on stock returns. The pivotal question arises: Can we predict profitable outcomes in stock market index investments over a one-year period based on inflation and interest rate data? Recognizing the potential financial and emotional impact of losing investments and related mental health issues, the team prioritizes precision to minimize setbacks and maximize returns.\n",
+    "During the COVID-19 pandemic, central banks globally responded by lowering interest rates to mitigate economic challenges. However, this led to heightened inflation due to increased consumer spending. In an effort to regain control and revert to pre-pandemic levels, central banks sharply raised interest rates to the highest point in 15 years. With over 50% of American households owning stocks {cite}`Caporal2023StockOwnership`, the team is keen to explore the impact of inflation and interest rates on stock returns. The pivotal question arises: Can we predict profitable outcomes in stock market index investments over a one-year period based on inflation and interest rate data? Predicting exact stock prices is challenging, so we simplify the task by transforming it into a binary classification problem predicting whether the stock price will increase or decrease over the next year. Recognizing the potential financial setback and emotional pain of losing investments, the team decided to use precision as metric to measure performance of our model.\n",
     "\n",
     "\n",
     "\n",
@@ -366,7 +365,8 @@
    "metadata": {},
    "source": [
     "### Scatterplots of Feature Pairs"
-   ]
+   ],
+   "id": "52b6b55838880029"
   },
   {
    "cell_type": "markdown",
