update html in docs

--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "_We utilized logistic regression to analyze the stock price data and provided a predictive model._\n",
     "\n",
-    "by Allan Lee, Andy Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 3)\n",
+    "by Allan Lee, Andy Zhang, Yi Yan and Chengyu Tao (DSCI 522 Group 3 Milestone 4)\n",
     "\n",
-    "2023/12/06"
+    "2023/12/09"
    ]
   },
   {
@@ -594,9 +594,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:522Group3]",
+   "display_name": "522Group3",
    "language": "python",
-   "name": "conda-env-522Group3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
