--- a/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
+++ b/report/predicting_direction_of_stock_price_from_inflation_rate_and_interest_rate.ipynb
@@ -5,7 +5,7 @@
    "id": "3d1f90cb45bbbc67",
    "metadata": {},
    "source": [
-    "## Predicting direction of stock price from interest rate and inflation rate"
+    "# Predicting direction of stock price from interest rate and inflation rate"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "id": "51f0df064432c0e5",
    "metadata": {},
    "source": [
-    "## Summary\n"
+    "## Summary"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "\n",
     "The desciption of our data is shown below.\n",
     "\n",
-    "#### columns\n",
+    "#### Columns\n",
     "| column name            | description                                                                                |\n",
     "|------------------------|--------------------------------------------------------------------------------------------|\n",
     "| gspc                   | price of S&P 500 stock index (will be ignored for model)                                   |\n",
@@ -262,8 +262,8 @@
     "| gspc_prev_year_chg_pct | change of gspc between now and 12 months ago (will be a feature for model)                 |            \n",
     "| gspc_next_year_pct_chg | change of gspc between now and 12 months later (will be used to get target)                | \n",
     "| target                 | whether gspc increased 12 months later compared to now (will be target for classification) |                      \n",
-    " \n",
-    "### Data Splitting and Shuffling\n",
+    "\n",
+    "#### Data Splitting and Shuffling\n",
     "We have data from 1955 to 2022. The dataframe consists of one target column and multiple feature columns. Every row of the dataframe is an observation with sampling period being 1 month. We will shuffle the data row-wise then split the data into training set and test set. We aim to uncover timeless and universal relationships between our features and the target. For example, maybe stock market index always grows whenever the central bank lowers interest rate irrespective of what happens previously. With the above goal in mind, we believe we do not have data leakage issue even though some observation in the training data may occur after some observation in the test data."
    ]
   },
@@ -626,9 +626,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:522Group3]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-522Group3-py"
   },
   "language_info": {
    "codemirror_mode": {
